# storyboard

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
docs/: SYNTAX.md
example/: .gitignore  Dockerfile
example/content/: characters.yaml  image_templates.yaml  scenes.yaml
example/example.backup/content/: main.yaml
example/example.backup/output/: metadata.json
example/example.backup/output/campsite/: metadata.json
example/example.backup/output/the_briefing/: metadata.json
example/output/morning_after/: metadata.json
example/output/severed_floor/: metadata.json
example/output/tutorial/: metadata.json
storyboard/cli/: cli.py
storyboard/cli/composite/: composite_command.py  movie.py
storyboard/cli/generate/: generate_command.py  parallel_generator.py  ui.py  utils.py
storyboard/cli/image/: image_command.py
storyboard/cli/init/: init_command.py
storyboard/cli/run/: logging_manager.py  parallel_generator.py  run_command.py  ui.py
storyboard/cli/serve/: serve_command.py  server.py
storyboard/cli/tts/: tts_command.py
storyboard/cli/update/: __init__.py  interactive.py  selector_parser.py  update_command.py
storyboard/core/: shapes.py  templating.py
storyboard/core/image/: generate.py  optimize.py
storyboard/core/load/: config.py  load.py  parse.py  references.py  validate.py
storyboard/core/tts/: generate.py  optimize.py
storyboard/tests/: conftest.py  test_composite.py  test_generation.py  test_load_e2e.py  test_parsing_validation.py  test_templating_resolving.py  test_update_command.py
(+23 files in other folders)
